--- a/src/components/fab/fab.md.scss
+++ b/src/components/fab/fab.md.scss
@@ -41,7 +41,7 @@ $fab-button-md-transition-duration:               300ms !default;
 $fab-button-md-transition-timing-function:     cubic-bezier(.4, 0, .2, 1) !default;
 
 
-.fab-md {
+.ion-fab-md {
   color: $fab-md-text-color;
   background-color: $fab-md-background-color;
 
@@ -52,7 +52,7 @@ $fab-button-md-transition-timing-function:     cubic-bezier(.4, 0, .2, 1) !defau
               color $fab-button-md-transition-duration $fab-button-md-transition-timing-function;
 }
 
-.fab-md.activated {
+.ion-fab-md.activated {
   background-color: $fab-md-background-color-activated;
   box-shadow: $fab-md-box-shadow-activated;
 }
@@ -75,7 +75,7 @@ $fab-button-md-transition-timing-function:     cubic-bezier(.4, 0, .2, 1) !defau
 // Material Design FAB Ripple
 // --------------------------------------------------
 
-.fab-md .button-effect {
+.ion-fab-md .button-effect {
   background-color: color-contrast($colors-md, $fab-md-background-color);
 }
 
@@ -89,16 +89,16 @@ $fab-button-md-transition-timing-function:     cubic-bezier(.4, 0, .2, 1) !defau
   $bg-color-activated: color-shade($bg-color);
   $fg-color: $color-contrast;
 
-  .fab-md-#{$color-name} {
+  .ion-fab-md-#{$color-name} {
     color: $fg-color;
     background-color: $bg-color;
   }
 
-  .fab-md-#{$color-name}.activated {
+  .ion-fab-md-#{$color-name}.activated {
     background-color: $bg-color-activated;
   }
 
-  .fab-md-#{$color-name} .button-effect {
+  .ion-fab-md-#{$color-name} .button-effect {
     background-color: $fg-color;
   }
 }
